# Tanks

./: .gitignore  Bloodstone.sln  CMakeLists.txt  README.md  Tanks.sln
Assets/Levels/: 0.txt  2.txt
Bloodstone-core/: Bloodstone-core.vcxproj  Bloodstone-core.vcxproj.filters  Engine.h  main.cpp
Bloodstone-core/graphics/: window.cpp  window.h
Bloodstone-core/src/graphics/: window.cpp  window.h
Bloodstone-core/threads/: ThreadSafeQueue.h
Debug/: Tester.ilk
Debug/Data/Levels/: 0.txt  6.txt
Karakan/: Karakan.aps  Karakan.vcxproj  Karakan.vcxproj.filters  main.cpp  resource.h
Karakan/shaders/: compile.bat  shader.frag
Source/: AnimateElement.cpp  AnimateElement.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Construction.cpp  Construction.h  DataBase.cpp  DataBase.h  Enemy.cpp  Enemy.h  FSM.cpp  FSM.h  GUI.h  Game.cpp  Game.h  MapElement.h  Menu.cpp  Menu.h  MyWindow.cpp  Node.cpp  Player.cpp  Player.h  PowerUp.cpp  ResourceHolder.h  Source.cpp  State.cpp  Tank.h  Task.cpp  ThreadManager.cpp
Tanks/: AnimateElement.cpp  AnimateElement.h  Bullet.cpp  Bullet.h  Construction.cpp  Construction.h  DataBase.cpp  DataBase.h  Enemy.cpp  Enemy.h  FSM.cpp  FSM.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Level.cpp  Level.h  MapElement.cpp  MapElement.h  Menu.cpp  MyThread.cpp  MyThread.h  MyWindow.cpp  MyWindow.h  Node.cpp  Node.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  RenderElement.cpp  RenderElement.h  ResourceHolder.h  Source.cpp  State.cpp  State.h  Tank.cpp  Tank.h  Tanks.vcxproj  (+6 more)
Tanks/Data/Levels/: 0.txt  5.txt  7.txt
Tanks/lua/: lgc.c  lobject.h  ltable.c  ltable.h
Tester/: SourceTester.cpp  Tester.vcxproj  Tester.vcxproj.filters
cmake_test/: CMakeLists.txt
cmake_test/src/: Source.cpp
cmake_test/src/Engine/: MyWindow.cpp  MyWindow.h
cmake_test/src/cmake/: CMakeLists.txt
cmake_test/test/: Engine.h  Tests.cpp
cmake_test/test/cmake/: CMakeLists.txt
x64/Debug/Data/Levels/: 1.txt  3.txt  4.txt  8.txt  9.txt
(+1 files in other folders)
